infrastructure: Move ServiceCollection to another project.
Moving the ServiceCollection to another project, as having it on
the default one concurs in a circular dependency.

--- a/02.Application/Application/Application.csproj
+++ b/02.Application/Application/Application.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\00.Domain\Domain\Domain.csproj" />
     <ProjectReference Include="..\..\03.Persistence\Persistence\Persistence.csproj" />
+    <ProjectReference Include="..\..\04.Infrastructure\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
