--- a/07.Functions/Functions/Functions.csproj
+++ b/07.Functions/Functions/Functions.csproj
@@ -24,7 +24,9 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.26" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\02.Application\Application\Application.csproj" />
     <ProjectReference Include="..\..\04.Infrastructure\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\..\Infrastructure.Crosscutting\Infrastructure.Crosscutting.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
