infrastructure: Separate Helpers from Dependency Injection
Having both things on the same project was giving a circular dependency.
As the Infrastructure need to know about the AnimeService and the
Service layer need to know about the EnumHelper method.

--- a/04.Infrastructure/Infrastructure.Crosscutting/Infrastructure.Crosscutting.csproj
+++ b/04.Infrastructure/Infrastructure.Crosscutting/Infrastructure.Crosscutting.csproj
@@ -1,17 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\02.Application\Application\Application.csproj" />
-    <ProjectReference Include="..\03.Persistence\Persistence\Persistence.csproj" />
+    <ProjectReference Include="..\..\02.Application\Application\Application.csproj" />
+    <ProjectReference Include="..\..\03.Persistence\Persistence\Persistence.csproj" />
   </ItemGroup>
 
   <ItemGroup>
