--- a/01.Presentation/Presentation.Validators/Presentation.Validators.csproj
+++ b/01.Presentation/Presentation.Validators/Presentation.Validators.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\00.Domain\Domain\Domain.csproj" />
+    <ProjectReference Include="..\..\00.Domain\Domain\Domain.csproj" />
   </ItemGroup>
 
 </Project>
