--- a/04.Infrastructure/Infrastructure.Crosscutting/Infrastructure.Crosscutting.csproj
+++ b/04.Infrastructure/Infrastructure.Crosscutting/Infrastructure.Crosscutting.csproj
@@ -13,7 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\02.Application\Application\Application.csproj" />
     <ProjectReference Include="..\..\03.Persistence\Persistence\Persistence.csproj" />
-    <ProjectReference Include="..\..\Presentation.Validators\Presentation.Validators.csproj" />
+    <ProjectReference Include="..\..\01.Presentation\Presentation.Validators\Presentation.Validators.csproj" />
   </ItemGroup>
 
   <ItemGroup>
