infrastructure: Add new services, repositories and methods
- Services: User and Account.
- Repositories: User.
- Methods: AddIdentity, AddAuthentication and AddValidators

--- a/04.Infrastructure/Infrastructure.Crosscutting/Infrastructure.Crosscutting.csproj
+++ b/04.Infrastructure/Infrastructure.Crosscutting/Infrastructure.Crosscutting.csproj
@@ -6,12 +6,14 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\02.Application\Application\Application.csproj" />
     <ProjectReference Include="..\..\03.Persistence\Persistence\Persistence.csproj" />
+    <ProjectReference Include="..\..\Presentation.Validators\Presentation.Validators.csproj" />
   </ItemGroup>
 
   <ItemGroup>
