--- a/01.Presentation/Presentation.Validators/Presentation.Validators.csproj
+++ b/01.Presentation/Presentation.Validators/Presentation.Validators.csproj
@@ -5,11 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation.AspNetCore" Version="8.1.3" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="8.3.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\00.Domain\Domain\Domain.csproj" />
+    <ProjectReference Include="..\..\02.Application\Application\Application.csproj" />
   </ItemGroup>
 
 </Project>
