presentation: Add Validator for UserDTO

--- a/01.Presentation/Presentation.Validators/Presentation.Validators.csproj
+++ b/01.Presentation/Presentation.Validators/Presentation.Validators.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.4.0" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0006" />
   </ItemGroup>
 
   <ItemGroup>
