--- a/06.Migrations/Migrations.Data/Migrations.Data.csproj
+++ b/06.Migrations/Migrations.Data/Migrations.Data.csproj
@@ -17,6 +17,8 @@
     <Compile Remove="Migrations\20190627052127_Subtitle.Designer.cs" />
     <Compile Remove="Migrations\20190627055630_Subtitle.cs" />
     <Compile Remove="Migrations\20190627055630_Subtitle.Designer.cs" />
+    <Compile Remove="Migrations\20200101222904_Bookmarks.cs" />
+    <Compile Remove="Migrations\20200101222904_Bookmarks.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
