--- a/01.Presentation/Presentation.Validators/Presentation.Validators.csproj
+++ b/01.Presentation/Presentation.Validators/Presentation.Validators.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.2" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0007" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="9.1.3" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
